# quant_trading

./: .gitignore  README.md  pyproject.toml
data/: skill_scores.json
docs/: absorption_alpha_factors.md  absorption_backtest_strategy.md  absorption_crypto_trading.md  absorption_data_execution.md  absorption_data_execution_v2.md  absorption_llm_agent.md  absorption_market_making_hft.md  absorption_ml_prediction.md  absorption_multiagent_architecture.md  absorption_options_derivatives.md  absorption_portfolio_investment.md  absorption_risk_management.md  absorption_rl_drl.md  absorption_sentiment_nlp.md  absorption_technical_analysis.md  absorption_time_series.md  hummingbot_architecture_analysis.md  hummingbot_patterns.md
quant_trading/: ARCHITECTURE.md  MODULES.md  PRODUCTION_README.md  __init__.py  cli.py
quant_trading/agent/: __init__.py  agent_quant.py  ai_broker_agent.py  calibration.py  debate_adapter.py  debate_engine.py  dream_scheduler.py  eth_cycle_brain.py  eth_long_runner.py  finmem.py  finmem_llm.py  hedge_fund_agents.py  import_ashare.py  intel_collector.py  invest_debate.py  kelly_sizer.py  learning_loop.py  llm_tradebot.py  market_analysis_orchestrator.py  market_tools.py  memory_bank.py  model_ensemble.py  multi_llm_bridge.py  multi_llm_ensemble.py  multi_role_agents.py  polymarket_agent.py  polymarket_autonomous.py  portfolio_manager.py  prism_insight.py  report_generator.py  research_adapter.py  research_pipeline.py  research_team.py  review_engine.py  risk_checks.py  risk_gate.py  skill.py  stock_long_runner.py  technical_perception.py  trading_agents.py  (+2 more)
quant_trading/arbitrage/: __init__.py  arbitrage_predictor.py  ibkr_pairs.py  lead_lag.py  options_stat_arb.py  polymarket.py  polymarket_api.py  spot_futures.py  triangular.py
quant_trading/backtest/: __init__.py  analyzer.py  backtest_engine.py  engine.py  storage.py
quant_trading/backtester/: __init__.py  anti_overfit.py  backtrader_framework.py  backtrader_lite.py  bootstrap.py  event_engine.py  experiment_db.py  experiment_manager.py  hft_simulator.py  numba_engine.py  optuna_optimizer.py  parallel_backtest.py  pipeline.py  position_fsm.py  suite_engine.py  suite_trading.py  walkforward.py  zipline_lite.py
quant_trading/config/: production.py  v36_config.py
quant_trading/connectors/: __init__.py  base_connector.py  binance_depth_cache.py  binance_orderbook.py  binance_rest.py  binance_trading.py  binance_ws.py  ccxt_adapter.py  gate_sync.py  (+3 more)
reports/: cycle_20260407_1458.txt  daily_20260407.md
tests/: __init__.py  test_v36_strategy.py
(+414 files in other folders)
